# scicloud

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: 2024.txt
src/: cloud.py  main.py  tokenizer.py
